# rm_final

./: .gitignore  CMakeLists.txt  README.md
code/part1/include/: Matrix.h  Model.h
code/part1/scr/: 1.cpp  Matrix.cpp  Model.cpp
code/part2/: read_fc.cpp
code/part3/: read_fc.cpp
code/part3/include/: Matrix_template.h  Model_template.h
code/part3/scr/: Matrix_template.cpp  Model_template.cpp
code/part4/: main.cpp  time_normal.txt  time_thread.txt
code/part4/include/: Matrix.h  Model.h
code/part4/scr/: Matrix.cpp  Model.cpp
code/part5/: Client.cpp  Server.cpp  main.cpp
code/part5/tcpSocket/: tcpSocket.cpp  tcpSocket.h
code/part6/: normal.cpp  plus.cpp
part1/include/: Model.h
part1/scr/: Matrix.cpp  Model.cpp
